platform/deploy/infra/prometheus/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    istio-injection: enabled
    threadforge.io/mesh: allowed
    name: monitoring
