platform/deploy/infra/prometheus/templates/prometheus-peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: prometheus-mtls
  namespace: monitoring
spec:
  mtls:
    mode: STRICT
