platform/deploy/infra/prometheus/templates/prometheus-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: prometheus-dr
  namespace: monitoring
spec:
  host: prometheus-operated.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
